--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,9 @@
 # tmux 1.8
 
+# change default-shell
+set-option -g default-shell /bin/zsh
+set-option -g default-command /bin/zsh
+
 # prefix key change
 set-option -g prefix c-t
 unbind-key c-b
