--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,9 @@
         "_": true,
         "Backbone": true
     },
+	"rules": {
+        "semi": 2
+    },
     "env": {
         "browser": true,
         "jquery": true
