migrate tmux.conf 2.8 -> 3.0a

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,11 +16,8 @@ bind-key c-t last-window
 set-window-option -g mode-keys vi
 
 # status coloring
-set-option -g status-bg colour25
-set-option -g status-fg white
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-bg colour9
-set-window-option -g window-status-current-attr bold#,underscore
+set-option -g status-style bg=colour25,fg=white
+set-window-option -g window-status-current-style fg=white,bg=colour9,bold
 
 # pane split like vim
 bind s split-window -v
